--- a/Assets/contact.html
+++ b/Assets/contact.html
@@ -1,9 +1,5 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+<p>Tel: +52 (554)364-1948</p>
+<p>Email: camiam118@gmail.com</p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/cameron-ogden-861543220/">My Profile</a>
 </p>
